// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`open-ended [NEGATIVE] renderEditorContent should render if question is undefined 1`] = `
.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #F7F8FA;
  -moz-scrollbar-color: #4475E3 #F7F8FA;
  -ms-scrollbar-color: #4475E3 #F7F8FA;
  scrollbar-color: #4475E3 #F7F8FA;
}

.c1::-webkit-scrollbar {
  width: 1.25rem;
  height: 1.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #F7F8FA;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0.5rem solid #F7F8FA;
  width: 0.25rem;
  min-height: 1.25rem;
}

.c2 {
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  outline: none;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
  background: transparent;
  overflow-y: auto;
  caret-color: #4475E3;
  overflow-x: hidden;
  resize: none;
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  padding: 1rem;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  background-color: #F7F8FA;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover:enabled {
  border-color: #2F65E0;
}

.c2:active:enabled,
.c2:focus-visible {
  outline: none;
  border-color: #4475E3;
  caret-color: #474747;
}

.c2:disabled {
  color: #DBDBDB;
  border-color: #F7F8FA;
  background-color: rgba(219,219,219,0.2);
}

.c2::-webkit-input-placeholder {
  color: #808080;
}

.c2::-moz-placeholder {
  color: #808080;
}

.c2:-ms-input-placeholder {
  color: #808080;
}

.c2::placeholder {
  color: #808080;
}

.c2:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c2:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::placeholder {
  color: #DBDBDB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  background-color: #FFFFFF !important;
  border-color: #ECF1FC !important;
  height: 4.5rem;
  padding-top: 0.5rem;
}

.c3::-webkit-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::-moz-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3:-ms-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

<body>
  <div>
    <div
      class="c0"
    >
      <textarea
        class=" c1 c2 c3"
        disabled=""
        placeholder="Max 500 characters"
        rows="1"
      />
    </div>
  </div>
</body>
`;

exports[`open-ended [NEGATIVE] renderPreviewContent should not crash if answers are not defined 1`] = `
.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #F7F8FA;
  -moz-scrollbar-color: #4475E3 #F7F8FA;
  -ms-scrollbar-color: #4475E3 #F7F8FA;
  scrollbar-color: #4475E3 #F7F8FA;
}

.c1::-webkit-scrollbar {
  width: 1.25rem;
  height: 1.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #F7F8FA;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0.5rem solid #F7F8FA;
  width: 0.25rem;
  min-height: 1.25rem;
}

.c2 {
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  outline: none;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
  background: transparent;
  overflow-y: auto;
  caret-color: #4475E3;
  overflow-x: hidden;
  resize: none;
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  padding: 1rem;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  background-color: #F7F8FA;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover:enabled {
  border-color: #2F65E0;
}

.c2:active:enabled,
.c2:focus-visible {
  outline: none;
  border-color: #4475E3;
  caret-color: #474747;
}

.c2:disabled {
  color: #DBDBDB;
  border-color: #F7F8FA;
  background-color: rgba(219,219,219,0.2);
}

.c2::-webkit-input-placeholder {
  color: #808080;
}

.c2::-moz-placeholder {
  color: #808080;
}

.c2:-ms-input-placeholder {
  color: #808080;
}

.c2::placeholder {
  color: #808080;
}

.c2:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c2:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::placeholder {
  color: #DBDBDB;
}

.c3 {
  background-color: #FFFFFF !important;
  border-color: #ECF1FC !important;
  height: 4.5rem;
  padding-top: 0.5rem;
}

.c3::-webkit-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::-moz-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3:-ms-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c4 {
  color: #808080;
  font-family: Inter,sans-serif;
  font-size: 0.5rem;
  line-height: 0.625rem;
  font-weight: 400;
  font-style: normal;
  margin-top: 0.1875rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

<body>
  <div>
    <div
      class="c0"
    >
      <textarea
        class=" c1 c2 c3"
        data-testid="open-ended-textarea"
        rows="1"
      />
      <div
        class="c4"
      >
        0 / 500
      </div>
    </div>
  </div>
</body>
`;

exports[`open-ended renderEditorContent should render editor content 1`] = `
.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #F7F8FA;
  -moz-scrollbar-color: #4475E3 #F7F8FA;
  -ms-scrollbar-color: #4475E3 #F7F8FA;
  scrollbar-color: #4475E3 #F7F8FA;
}

.c1::-webkit-scrollbar {
  width: 1.25rem;
  height: 1.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #F7F8FA;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0.5rem solid #F7F8FA;
  width: 0.25rem;
  min-height: 1.25rem;
}

.c2 {
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  outline: none;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
  background: transparent;
  overflow-y: auto;
  caret-color: #4475E3;
  overflow-x: hidden;
  resize: none;
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  padding: 1rem;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  background-color: #F7F8FA;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover:enabled {
  border-color: #2F65E0;
}

.c2:active:enabled,
.c2:focus-visible {
  outline: none;
  border-color: #4475E3;
  caret-color: #474747;
}

.c2:disabled {
  color: #DBDBDB;
  border-color: #F7F8FA;
  background-color: rgba(219,219,219,0.2);
}

.c2::-webkit-input-placeholder {
  color: #808080;
}

.c2::-moz-placeholder {
  color: #808080;
}

.c2:-ms-input-placeholder {
  color: #808080;
}

.c2::placeholder {
  color: #808080;
}

.c2:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c2:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::placeholder {
  color: #DBDBDB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  background-color: #FFFFFF !important;
  border-color: #ECF1FC !important;
  height: 4.5rem;
  padding-top: 0.5rem;
}

.c3::-webkit-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::-moz-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3:-ms-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

<body>
  <div>
    <div
      class="c0"
    >
      <textarea
        class=" c1 c2 c3"
        disabled=""
        placeholder="Max 500 characters"
        rows="1"
      />
    </div>
  </div>
</body>
`;

exports[`open-ended renderPreviewContent should render preview content 1`] = `
.c1 {
  -webkit-scrollbar-width: thin;
  -moz-scrollbar-width: thin;
  -ms-scrollbar-width: thin;
  scrollbar-width: thin;
  -webkit-scrollbar-color: #4475E3 #F7F8FA;
  -moz-scrollbar-color: #4475E3 #F7F8FA;
  -ms-scrollbar-color: #4475E3 #F7F8FA;
  scrollbar-color: #4475E3 #F7F8FA;
}

.c1::-webkit-scrollbar {
  width: 1.25rem;
  height: 1.25rem;
}

.c1::-webkit-scrollbar-track {
  background: #F7F8FA;
  border-radius: 0.25rem;
  margin: 0.0625rem 0;
}

.c1::-webkit-scrollbar-thumb {
  background-color: #4475E3;
  border-radius: 0.625rem;
  border: 0.5rem solid #F7F8FA;
  width: 0.25rem;
  min-height: 1.25rem;
}

.c2 {
  resize: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  outline: none;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
  background: transparent;
  overflow-y: auto;
  caret-color: #4475E3;
  overflow-x: hidden;
  resize: none;
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  padding: 1rem;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  background-color: #F7F8FA;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover:enabled {
  border-color: #2F65E0;
}

.c2:active:enabled,
.c2:focus-visible {
  outline: none;
  border-color: #4475E3;
  caret-color: #474747;
}

.c2:disabled {
  color: #DBDBDB;
  border-color: #F7F8FA;
  background-color: rgba(219,219,219,0.2);
}

.c2::-webkit-input-placeholder {
  color: #808080;
}

.c2::-moz-placeholder {
  color: #808080;
}

.c2:-ms-input-placeholder {
  color: #808080;
}

.c2::placeholder {
  color: #808080;
}

.c2:disabled::-webkit-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::-moz-placeholder {
  color: #DBDBDB;
}

.c2:disabled:-ms-input-placeholder {
  color: #DBDBDB;
}

.c2:disabled::placeholder {
  color: #DBDBDB;
}

.c3 {
  background-color: #FFFFFF !important;
  border-color: #ECF1FC !important;
  height: 4.5rem;
  padding-top: 0.5rem;
}

.c3::-webkit-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::-moz-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3:-ms-input-placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c3::placeholder {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747 !important;
  opacity: 0.7;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c4 {
  color: #808080;
  font-family: Inter,sans-serif;
  font-size: 0.5rem;
  line-height: 0.625rem;
  font-weight: 400;
  font-style: normal;
  margin-top: 0.1875rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

<body>
  <div>
    <div
      class="c0"
    >
      <textarea
        class=" c1 c2 c3"
        data-testid="open-ended-textarea"
        rows="1"
      />
      <div
        class="c4"
      >
        0 / 500
      </div>
    </div>
  </div>
</body>
`;
